# rBit

./: Cargo.toml  README.md
src/: error.rs  main.rs  run.rs
src/utils/: download.rs  mod.rs  validate.rs
