[package]
name = "rBit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
lava_torrent = "0.11.1"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
